# internal/http/handler/types.go
@@ -7,19 +7,11 @@ type CustomClaims struct {
 	jwt.RegisteredClaims
 }
 
-type LoginRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+type GoogleAuthRequest struct {
+	Credential string `json:"credential"`
 }
 
 type AddProviderAPIKeyRequest struct {
 	Provider string `json:"provider"`
 	APIKey   string `json:"api_key"`
-}
-
-type SignupRequest struct {
-	Name       string `json:"name"`
-	Email      string `json:"email"`
-	Password   string `json:"password"`
-	Profession string `json:"profession"`
 }
